# aeff

./: .gitignore  .merlin  .ocamlformat-ignore  LICENSE.md  Makefile  README.md  _tags  aeff.bc.js  aeff.css  coop.hook  example.hook  futures.hook  hook.byte  index.html  pervasives.aeff  queens.hook  stdlib.aeff  ticktock.hook  webInterface.bc.js
.github/workflows/: gh-pages.yml
etc/: aeff-mode.el
examples/: async.aeff  async.hook  cancellableCall.aeff  cancellableCallFunPayload.aeff  feed.aeff  feed.hook  feed2.aeff  feed3.aeff  guard.aeff  handleFirstThreeInterrupts.aeff  heapPure.aeff  heapRef.aeff  pervasives.hook  preemptive.aeff  processWith.aeff  process_with.aeff  references.aeff  remoteCall.aeff  remoteCall.hook  remoteCallFunPayload.aeff  runner.aeff  runner.hook  select.aeff  server.hook  spawnProcess.aeff  spawnSimple.aeff  ticktock.aeff
src/: aeff.html  aeff.ml  ast.ml  builtIn.ml  coop.hook  desugarer.ml  dune  examples.ml  hook.byte  hook.ml  interpreter.ml  lexer.mll  loader.ml  location.ml  model.ml  parser.mly  print.ml  redexSelectorTM.ml  runner.ml  symbol.ml  syntax.ml  typechecker.ml  utils.ml  view.ml
src/01-language/: ast.ml  builtIn.ml  primitives.ml
src/02-parser/: grammar.mly  lexer.mll  sugaredAst.ml  syntax.ml
src/03-desugarer/: desugarer.ml
src/04-typechecker/: primitives.ml  typechecker.ml
src/webInterface/: dune  examples.ml  model.ml  redexSelectorTM.ml  view.ml  webInterface.ml
tests/: async.aeff  cancellableCall.aeff  dune  generate_dune_rules.ml  heapPure.aeff  out  process_with.aeff  remoteCall.aeff  run_tests.t  runner.aeff  select.aeff  spawnProcess.aeff  spawnSimple.aeff  theGoodTheBadAndTheUgly.aeff
web/: aeff.html  index.html
(+65 files in other folders)
