(executable
 (name webInterface)
 (libraries ocaml-vdom core)
 (modes js)
 (link_flags -no-check-prims)
 (promote
  (until-clean)
  (into ../../web)
  (only webInterface.bc.js)))

;; This is an expanded form of the trick used in src/core/dune to generate the module
;; Examples_aeff with the examples to include in the web interface.

(rule
 (with-stdout-to
  examples_aeff.ml
  (progn
   (echo "let examples = [")
   ;; We need to repeat the following three lines for each included example.
   ;; The first line gives the name of the example and the second gives its source.
   (echo "({|Asynchronous computation|}, {|")
   (cat ../../examples/async.aeff)
   (echo "|});")
   (echo "({|Cancellable calls|}, {|")
   (cat ../../examples/cancellableCall.aeff)
   (echo "|});")
   (echo "({|Client feed|}, {|")
   (cat ../../examples/feed.aeff)
   (echo "|});")
   (echo "({|Pure heap|}, {|")
   (cat ../../examples/heapPure.aeff)
   (echo "|});")
   (echo "({|Heap with references|}, {|")
   (cat ../../examples/heapRef.aeff)
   (echo "|});")
   (echo "({|Post-processing|}, {|")
   (cat ../../examples/process_with.aeff)
   (echo "|});")
   (echo "({|Preemptive multi-threading|}, {|")
   (cat ../../examples/preemptive.aeff)
   (echo "|});")
   (echo "({|Remote call|}, {|")
   (cat ../../examples/remoteCall.aeff)
   (echo "|});")
   (echo "({|Runners|}, {|")
   (cat ../../examples/runner.aeff)
   (echo "|});")
   (echo "({|Select|}, {|")
   (cat ../../examples/select.aeff)
   (echo "|});")
   (echo "({|Timer|}, {|")
   (cat ../../examples/ticktock.aeff)
   (echo "|});")
   (echo "]"))))
